Refactor framework to detect and provide environment (servlet/portlet) specific functionality -- ICE-1625